crates/strider/tests/snapshots/v2__ppc64le__complex__bit_test_zero.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x10010290:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "10" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "11" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "10" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "15" -> "12" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "16" -> "12" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "17" -> "12" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "17" [label="φ f2", shape=house, fillcolor="#163030"];
  "10" -> "17" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v18" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v18" [color="#888888", style=dashed];
  "v18" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v19" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v19" [color="#888888", style=dashed];
  "v19" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "11" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "20" -> "11" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x10010270:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "11" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "21" -> "11" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "22" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "23" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0xffffffffffffffec:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "22" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "24" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "25" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "26" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "27" -> "26" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "27" [label="And:u64", shape=box, fillcolor="#2d2d2d"];
  "28" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "28" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "30" -> "28" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "30" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "31" -> "30" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "31" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "22" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0xffffffffffffffe4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "24" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "33" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "25" -> "24" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "33" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "34" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "33" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "30" -> "33" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "35" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "22" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0xffffffffffffffe8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "34" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "37" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "34" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "30" -> "34" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "37" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "38" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "37" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "40" -> "37" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "39" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "22" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0xffffffffffffffec:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "38" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "42" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "43" -> "38" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "30" -> "38" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "43" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "22" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0xfffffffffffffff0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "42" [label="StackStore u64\n→ ram[sp - 128]", shape=box3d, fillcolor="#20182a"];
  "45" -> "42" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "42" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "22" -> "42" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "46" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "47" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="const 0xffffffffffffff80:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "22" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="StackStore u64\n→ ram[sp + 16]", shape=box3d, fillcolor="#20182a"];
  "48" -> "45" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "49" -> "45" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "50" -> "45" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "50" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "49" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "51" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x10:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "22" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "52" -> "48" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "53" -> "48" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "54" -> "48" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "54" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "53" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "55" -> "53" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0xfffffffffffffff8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "22" -> "53" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "16" [label="φ f1", shape=house, fillcolor="#163030"];
  "10" -> "16" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v56" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v56" [color="#888888", style=dashed];
  "v56" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v57" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v57" [color="#888888", style=dashed];
  "v57" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "15" [label="φ r4", shape=house, fillcolor="#163030"];
  "10" -> "15" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v58" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v58" [color="#888888", style=dashed];
  "v58" -> "15" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v59" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v59" [color="#888888", style=dashed];
  "v59" -> "15" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "14" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "60" -> "14" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "60" [label="φ Val", shape=house, fillcolor="#163030"];
  "10" -> "60" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "61" -> "60" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "61" [label="const 0x11:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "62" -> "60" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "62" [label="const 0x2a:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="φ Mem", shape=house, fillcolor="#163030"];
  "10" -> "13" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "63" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "64" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "64" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "5" -> "64" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "65" -> "64" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "66" -> "64" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0x2a:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "65" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "22" -> "65" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "67" -> "65" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "67" [label="const 0xfffffffffffffff4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "63" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "11" -> "63" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "65" -> "63" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "68" -> "63" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "68" [label="const 0x11:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "69" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "69" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "70" -> "69" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "71" -> "69" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "70" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "72" -> "70" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "73" -> "70" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "73" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "72" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "74" -> "72" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "75" -> "72" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "75" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "76" -> "75" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "77" -> "75" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "76" [label="init\nxer_so", shape=Mdiamond, fillcolor="#1a3a5c"];
  "74" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "78" -> "74" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "79" -> "74" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "79" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "80" -> "79" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "81" -> "79" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "81" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "80" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "82" -> "80" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "82" [label="Equal\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "83" -> "82" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "84" -> "82" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "84" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "83" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "26" -> "83" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "78" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "85" -> "78" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "86" -> "78" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "86" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "87" -> "86" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "88" -> "86" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "88" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "87" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "89" -> "87" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "89" [label="Sless\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "90" -> "89" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "90" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "83" -> "89" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "85" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "91" -> "85" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "92" -> "85" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "92" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "91" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "93" -> "91" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "93" [label="Sless\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "83" -> "93" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "94" -> "93" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "94" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
}
